Added and modified files to enable admin and link emails

--- a/tsa-web/src/main/resources/templates/surveyInitiated.html
+++ b/tsa-web/src/main/resources/templates/surveyInitiated.html
@@ -5,6 +5,6 @@
 <title>Survey Launch</title>
 </head>
 <body>
-	Dear Admin, Survey has been successfully initiated in our system. We will notify you over email once it is successfully launched!
+	Dear Admin, Survey has been successfully initiated. We will notify you via email once it is successfully launched!
 </body>
 </html>
