--- a/tsa-web/src/main/resources/templates/email/emailSurvey.html
+++ b/tsa-web/src/main/resources/templates/email/emailSurvey.html
@@ -12,8 +12,87 @@
 
 </head>
 <body>
-	<div class="container">
+	<table border="0" cellpadding="0" cellspacing="0" width="100%">
+       <tbody>
+            <tr>
+              <td align="center" valign="top" id="headerContainer">
+                <div style="height:100px; background-color:">
+                    <img   src="https://www.google.com/a/3pillarglobal.com/images/logo.gif?alpha=1&amp;service=google_default" style="border: 0px  ; width: 144px; height: 60px; margin: 0px;" width="100">
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td align="center" valign="top">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                  <tbody>
+                    <tr>
+                       <td valign="top" style="padding-right: 9px; padding-left:9px; padding-top:0; padding-bottom: 0; text-align: center;">
+                                <img align="center" alt="" src="https://gallery.mailchimp.com/891a917aab45595bd6f68bd86/images/b4d99b1c-66c7-4c3c-bc3c-cc52347f8cac.png" width="564" style="max-width:1206px; padding-bottom:0; display: inline!important; vertical-align: bottom;">
+                              
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+        </tbody>
+       </table>
+       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width:100%;">
+              <tbody>
+                <tr>
+                  <td style="padding-top:10px; padding-right:18px; padding-bottom:18px; padding-left:18px;" valign="top" align="center" class="">
+                    <table border="0" cellpadding="0" cellspacing="0" class="" style="border-collapse:separate !important; border-radius:5px;background-color:#2BAADF;">
+                      <tbody>
+                        <tr>
+                          <td align="center" valign="middle" class="content" style="font-family:Arial; font-size:16px; padding:15px;">
+                            <a class="surveyButton" title="Take our survey" th:href="@{${link}}" target="_blank" style="font-weight:bold; letter-spacing:normal; line-height:100%; text-align:center; text-decoration:none; color: #FFFFFF;">Take our survey
+                            </a>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </td>
+                </tr>
+              </tbody>
+          </table>
+          <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%" width="100%" class="">
+              <tbody>
+                <tr>
+                  <td valign="top" class="" style="padding:5px 80px 20px; font-family:Arial, Helvetica, sans-serif; font-size:18px; text-align:center;">
+                    <span>We're always looking for ways to improve 3pillar so we can reach more. We've develop this <span style="color:#FF8C00"> super short survey</span> and we'd love a chance to hear from you. It take less than a minute and it will help us make 3pillar even better.
+                      <br>
+                       <br>
+                       <br>The 3Pillar Global Team
+                    </span>
+                  </td>
+                </tr>
+              </tbody>
+        </table>
+      	<table align="center" border="1" cellpadding="1" width="100%" style="max-width:100%; min-width:100%" class="footerContainer">
+              <tbody>
+                <tr>
+                  <td valign="top" class="" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px; font-size:12px; text-align:center">
+                    Fairfax&nbsp;|&nbsp;Boston&nbsp;|&nbsp;
+                      Cluj-Napoca&nbsp;|&nbsp;London&nbsp;
+                      |&nbsp;NYC&nbsp;|&nbsp;Noida&nbsp;|&nbsp;Timisoara
+                    <br>
+                    <br>You have received this email as a employee of <a href="http://www.3pillarglobal.com" target="_blank">3pillarglobal.com</a>
+                    <br>
+                    <a href="" target="_blank"><em>why did I get this?</em></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="" target="_blank">unsubscribe from this list</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="" target="_blank">update subscription preferences</a>
+                    <br>
+                    3Pillar Global · Ground Floor, Tower 3, Unitech Infospace, Sector - 62, Noida - 201301 · Noida 201301 · India
+                    <br>
+                    <br>
+                    <strong>3Pillar Global, Inc.</strong>
+                  </td>
+                </tr>
+              </tbody>
+      </table>
 
+	<!--  <div class="container">
+		
 		<div class="starter-template">
 			<h1>Employee Survey</h1>
 			<h2>
@@ -22,6 +101,7 @@
 		</div>
 
 	</div>
+	-->
 	
 	<script type="text/javascript"
 		src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>		
