Admin mail message update

--- a/tsa-web/src/main/resources/templates/email/adminNotification.html
+++ b/tsa-web/src/main/resources/templates/email/adminNotification.html
@@ -35,14 +35,14 @@
                    
                     
                     <br>
-                    <table border="0" cellpadding="0" cellspacing="0" class="" style="border-collapse:separate !important; border-radius:5px;background-color:#FFF;">
+                    <table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="border-collapse:separate !important; border-radius:5px;background-color:#FFF;">
                       <tbody>
                         <tr>
                           <td  valign="middle" class="content" style="font-family:Arial; font-size:16px; padding:15px;">
                             <span>
-                              Hi Admin,
+                              Dear Admin,
                               <br><br>
-                              Employee Survey has been launched successfully. Survey email send to all the employees.
+                              <span style="padding:0px 20px;">Employee Survey has been launched successfully.</span>
                     </span>
                           </td>
                     
