Update Web UI of start survey date and Launch Survey Page

--- a/tsa-web/src/main/resources/templates/startSurvey.html
+++ b/tsa-web/src/main/resources/templates/startSurvey.html
@@ -11,7 +11,7 @@
 	href="../../css/main.css" />
 </head>
 <body>
-<table style="max-width:100%; min-width:100%" width="100%" class="">
+<table style="max-width:100%; min-width:100%" width="100%" height="100%" class="">
     <tbody>
         <tr>
             <td valign="top" class="" style="padding:5px 80px 20px; font-family:Arial, Helvetica, sans-serif; font-size:18px; text-align:center; background-color: #ccf2ff">
