--- a/tsa-web/src/main/resources/templates/surveyInitiated.html
+++ b/tsa-web/src/main/resources/templates/surveyInitiated.html
@@ -5,7 +5,7 @@
 <title>Survey Launch</title>
 </head>
 <body>
-	 <table style="max-width:100%; min-width:100%" width="100%" class="">
+	<table style="max-width:100%; min-width:100%" width="100%" height="100%" class="">
     <tbody>
         <tr>
             <td valign="top" class="" style="padding:5px 80px 20px; font-family:Arial, Helvetica, sans-serif; font-size:18px; text-align:center; background-color: #ccf2ff">
